# gzbot

./: .gitignore
src/: CMakeLists.txt  package.xml
src/config/: controllers.yaml  mapper_params_online_async.yaml
src/launch/: bringup.launch.py  display.launch.py  gazebo.launch.py  pacman.launch.py  urdf.rviz
src/meshes/: base_link.stl  sensor_back_1.stl  sensor_front_1.stl  sensor_left_1.stl  sensor_right_1.stl  wheel_back_1.stl  wheel_front_1.stl  wheel_left_1.stl  wheel_right_1.stl
src/rviz/: urdf.rviz
src/scripts/: game_monitor.py  generate_maze.py  ghost_node.py  omni_teleop.py  pacman_node.py  scan_merger.py  score_visualizer.py  sonar_to_laserscan.py  spawn_arena.py
src/urdf/: materials.xacro  minibot_game.xacro  minibot_urdf.gazebo  minibot_urdf.trans  minibot_urdf.xacro
